--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>baidu</title>
     <link rel="stylesheet" href="./index.css"/>
-    <script src='http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="./index.js"></script>
 </head>
 <body>
